Fixing layout issues for WP Editor

--- a/src/blocks/timeline/content-timeline/editor.lazy.scss
+++ b/src/blocks/timeline/content-timeline/editor.lazy.scss
@@ -12,11 +12,18 @@
 	@media screen and (max-width: 1023px) {
 
 		// The speech-bubble like arrows are not visible in tablet/mobile preview as they get hidden behind the timeline-line, and hence the following code.
-		.uagb-timeline__day-new.uagb-timeline__day-right.uagb-timeline__events-inner-new {
+		.uagb-timeline__center-block .uagb-timeline__day-new.uagb-timeline__day-right.uagb-timeline__events-inner-new {
 			left: -15px;
 		}
-
-		.uagb-timeline__day-new.uagb-timeline__day-left.uagb-timeline__events-inner-new {
+​
+		.uagb-timeline__center-block .uagb-timeline__day-new.uagb-timeline__day-left.uagb-timeline__events-inner-new {
+			right: -15px;
+		}
+​
+		.uagb-timeline__left-block .uagb-timeline__day-new.uagb-timeline__day-right.uagb-timeline__events-inner-new {
+			right: -15px;
+		}
+		.uagb-timeline__left-block .uagb-timeline__day-new.uagb-timeline__day-left.uagb-timeline__events-inner-new {
 			right: -15px;
 		}
 
